5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4308/executions/1635_2703.log
== SUBMITION (2019-04-14 19:13:11) 
-- CODE:
idade = 19
print(eleitor)
-- EXECUTION TIME:
0.165209
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2703/main.py", line 2, in <module>
    print(eleitor)
NameError: name 'eleitor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:13:13) 
-- CODE:
idade = 19
print(eleitor)
-- EXECUTION TIME:
0.207343
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2703/main.py", line 2, in <module>
    print(eleitor)
NameError: name 'eleitor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:13:16) 
-- CODE:
idade = 19
print(eleitor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(eleitor)
NameError: name 'eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:13:30) 
-- CODE:
idade = 19
print (eleitor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print (eleitor)
NameError: name 'eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:18:40) 
-- CODE:
idade = 19
if (18)
mensagem = eleitor
print ( eleitor )
-- EXECUTION TIME:
0.127007
-- ERROR:
  File "/home/codebench/codes/1635/2703/main.py", line 2
    if (18)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:35:30) 
-- CODE:
idade = int(input("idade : "))
if (idade>=18) :
	print("eleitor")
else :
	print("nao_eleitor")
-- EXECUTION TIME:
0.230343
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
